<resources>
    <string name="app_name">Quarantine Monitoring</string>
    <string name="action_settings">Logout</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="sign_inLog">Sign In</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="pass_reset">Forgot Password? Click Here!</string>
    <string name="btn_Login">Login</string>
    <string name="txt_login">Login</string>
    <string name="txt_signup">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type here…</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="person_name">Person Name</string>
    <string name="father_name">Father Name</string>
    <string name="age">Age</string>
    <string name="gender_male_female">Gender (Male/Female)</string>
    <string name="phone_number">Phone number</string>
    <string name="coming_from">Coming From</string>
    <string name="reaching_date">Reaching Date</string>
</resources>
